--- a/src/components/collection-item/collection-item.css
+++ b/src/components/collection-item/collection-item.css
@@ -2,15 +2,27 @@
     width: 284px;
     padding: 10px;
     height: 420px;
-    border: 1px solid black;
     text-align: center;
+    background-color: #dfe3e6;
+}
+.collection-item hr{
+    width: 80%;
+    margin: 0 auto;
+    border: 2px solid #000000;
 }
 .large{
     width: 315px;
     height: 490px;
     margin-top: -30px;
     box-shadow: 0px 4px 30px 5px rgba(0, 0, 0, 0.3);
+    background-color: #fecb16;
 
+}
+.book-now{
+    margin-top: 30px;
+    background-color: #fff;
+    border: 1px solid #000;
+    color: #000;
 }
 @media screen and (max-width: 1024px){
     .collection-item{
@@ -33,15 +45,14 @@
 }
 @media screen and (max-width: 700px){
     .collection-item{
-        width: 93%;
-    }
-    .large{
         width: 100%;
-        
     }
+    
     
     
 }
 button{
     text-align: center;
+    background-color: #fff;
+    color: #000;
 }
