--- a/src/components/gallery-items/gallery-items.css
+++ b/src/components/gallery-items/gallery-items.css
@@ -1,9 +1,7 @@
 .gallery-item{
-    border: 1px solid red;
     width: 100%;
 }
 .gallery-image{
-    border: 1px solid black;
     width: 100%;
     height: 429.71px;
     background-size: cover;
@@ -15,9 +13,20 @@
         width: 93% ;
         padding: 10px;
         height: 420px;
-        border: 1px solid black;
         text-align: center;
         margin-top: 30px;
+    }
+    
+    
+}
+@media screen and (max-width: 700px){
+    .gallery-image{
+        margin: 0 auto;
+        width: 100% ;
+        padding: 0px;
+        height: 420px;
+        text-align: center;
+        margin-top: 5px;
     }
     
     
