--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -1,8 +1,9 @@
 .gallery h2{
     text-align: center;
+    padding-bottom: 10px;
 }
 .gallery-items{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
 }
