--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,7 +5,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
-    line-height: 37px;
+    /* line-height: 37px; */
     letter-spacing: 0.2rem;
 }
 .portfolio-pics{
